# moti

./: .gitignore  Makefile  README.md  editor.py
plugin_sample/: Cargo.toml
plugin_sample/src/: lib.rs
rust_editor/: .gitignore  Cargo.toml
rust_editor/src/: buffer.rs  editor.rs  key_handler.rs  lib.rs  main.rs  mode.rs  plugin.rs  syntax.rs  tree.rs  ui.rs
rust_editor/src/buffer/: mod.rs
rust_editor/src/editor/: mod.rs
rust_editor/src/mode/: mod.rs
rust_editor/src/plugin/: mod.rs
rust_editor/src/tree/: mod.rs
rust_editor/src/ui/: mod.rs  style.rs
