[package]
name = "rust_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_editor"
path = "src/lib.rs"

[[bin]]
name = "rust_editor"
path = "src/main.rs"

[dependencies]
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }

unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"

wasmtime = "21.0.1"
crossbeam-channel = "0.5.13"

tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
